# pattern-fill

./: .gitignore  MEMORY.md  PLAN.md  PROBLEMS.md  README.md  main.py  pyproject.toml
.github/workflows/: deploy-pages.yml  publish-pypi.yml
docs/: algorithm_description.md
examples/: sine_wave_demo.py
notebooks/: pattern_designer.py  test_upload.csv
src/pattern_fill/: __init__.py  fitting.py  gap_fill.py  gaussian_fitting.py  pattern.py  sine_fitting.py  stochastic.py
tests/: test_dataset_fill.py  test_fitting.py  test_gap_fill.py  test_gaussian_component.py  test_gaussian_fitting.py  test_pattern.py  test_sine_component.py  test_sine_fitting.py  test_stochastic.py  test_wasm_compat.py
