[project]
name = "pattern-fill"
version = "0.1.5"
description = "Time series gap-filling using daily diurnal patterns"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "meteaudata>=0.11.0",
    "wigglystuff>=0.2.27",
]

[project.optional-dependencies]
interactive = [
    "marimo>=0.19.11",
    "altair",
    "wigglystuff>=0.2.21",
    "matplotlib",
]
dev = [
    "pytest",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pattern_fill"]

[tool.pytest.ini_options]
pythonpath = ["src"]
